update html date 25-09-20

--- a/apeda.html
+++ b/apeda.html
@@ -27,8 +27,7 @@
   <style>
 .accordion-1 {
   background-color: #fff;
-  color: #444;
-  cursor: pointer;
+  color: #4446  cursor: pointer;
   padding: 18px;
   width: 100%;
   border-bottom: 1px solid #444;
@@ -233,136 +232,136 @@
            <h6 class="text-center">(catagory of products)</h6>
         </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-1.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Alcoholic and Non-Alcoholic Beverages</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-2.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Cereal and Cereal Products</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-3.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Cocoa and its products, chocolates of all kinds</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-4.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Confectionery, Biscuits and Bakery Products</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-5.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Dairy Products</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-6.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Fruits, Vegetables and their Products</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-7.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
-         </div>
-      </div>
-
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
-        <div class="exp-td-mark-class_list apeda-catagory">
-           <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
-           </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Groundnuts, Peanuts and Walnuts</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-8.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Guar Gum</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-9.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Herbal and Medicinal Plants</a></h5>
          </div>
       </div>
 
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-10.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Honey, Jaggery and Sugar Products</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-11.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Meat and Meat Products</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-12.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Pickles, Papads and Chutneys</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-13.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Poultry and Poultry Products</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
-             <img src="images/111.jpg" class="img-fluid">
+             <img src="images/food-14.png" class="img-fluid">
            </div>
-           <h5><a href="javascript:void(0);">Lorem Ipsum</a></h5>
+           <h5><a href="javascript:void(0);">Sugar</a></h5>
          </div>
       </div>
-      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-12">
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
+        <div class="exp-td-mark-class_list apeda-catagory">
+           <div class="exp-td-mark-class_list-box apeda-catagory-box">
+             <img src="images/food-15.png" class="img-fluid">
+           </div>
+           <h5><a href="javascript:void(0);">Meat </a></h5>
+         </div>
+      </div>
+      <div class="col-xl-3 col-lg-3 col-md-3 col-sm-4 col-6">
         <div class="exp-td-mark-class_list apeda-catagory">
            <div class="exp-td-mark-class_list-box apeda-catagory-box">
              <img src="images/111.jpg" class="img-fluid">
