--- a/fssai.html
+++ b/fssai.html
@@ -269,8 +269,19 @@
             </div> <!-- from_sec-1 end /-->
 
             <div class="from_sec-2">
-              <h2>Type of Activity </h2>
-              <div class="from_sec-2-wrapper">
+              <!-- <h2>Type of Activity </h2> -->
+
+               <div class="from-item-1 form-inline pt-4">
+                <label for="email" class="mr-sm-4">Type of Activity</label>
+                <select name="company_trunover" class="form-control valid" id="serv" aria-invalid="false">
+                    <option value="">Type of Activity</option>
+                    <option value="RTI Application">RTI Application</option>
+                    <option value="MSME Application">MSME Application</option>
+                    <option value="GST Registration">GST Registration</option>
+                    <option value="Consumer Complaint">Consumer Complaint</option>
+                </select>
+              </div>
+             <!--  <div class="from_sec-2-wrapper">
               <div class="from-item-2">
                 <ul>
                   <li class="checkbox form-check_1"><input type="checkbox" id="c1" name="activity_type" value="Does online">
@@ -346,7 +357,7 @@
                 </ul>
               </div>
 
-            </div>
+            </div> -->
             </div><!-- from_sec-2 end/ -->
 
              <div class="from_sec-3">
@@ -443,9 +454,7 @@
           <div class="fssai_img">
             <div class="ice-whn-code">
               <h2>How to use FSSAI License number on food product?</h2>
-              <p class="text-left">If you are selling food product in the market, you must display
-              FSSAI number on your product package in addition to ingredients
-              and flavour used into the product</p>
+              <p class="text-left">The major importance of FSSAI on your product is that it ensures that your food is verified chemically and hence, safe to consume. Next, it makes your company reliable, after obtaining food license you can make official announcement of same. It helps in marketing and thus attract more customers.</p>
               <img src="images/cam.png" class="img-fluid">
               <!-- <img src="images/barcode.png" class="img-fluid mx-auto"> -->
             </div>
@@ -553,12 +562,33 @@
 <section class="wht-is-fssai_outter">
   <div class="container">
     <div class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-        <div class="td-mark_document">
-            <h2 class="">What Is Fssai?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend arcu ac lacus posuere, at cursus eros porttitor. Nunc vel ligula sed sapien molestie lobortis<br> in eget nulla.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eleifend arcu ac lacus posuere, at cursus eros porttitor. <br> Nunc vel ligula sed sapien molestie lobortis in eget nulla.</p>
+         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="td-mark_document">
+            <h2 class="text-center">FSSAI Registration</h2>
+            <p>Are you a businessperson who wants to trade in food sector? Do you worry how to register for food safety and standard authority of India? Time to let go all your problems, because with expert help at Legalution, you can get FSSAI license in just 4 steps.</p>
+
+            <p>•  Guidance on selecting the food License type<br>
+               •  Verification of Documents<br>
+               •  Filling online FSSAI application<br>
+               •  Procurement of FSSAI food license
+            </p>
+          </div>
+      </div>
+
+
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="td-mark_document pt-3">
+            <h2 class="">What Is Fssai?</h2>
+            <p>Food safety and standard authority of India is an autonomous body established under Ministry of health, family welfare, Government of India. It was formed under the Food Safety and Standards Act, 2006 with sole aim to promote food hygiene and safety in India.</p>
+
+            <p>It is responsible for protecting and promoting public health through the regulation and supervision of food safety.</p>
+            <p>Benefits of FSSAI are</p>
+            <p>•  Consumer Awareness<br>
+               • Legal Advantage<br>
+               •  Using the FSSAI logo<br>
+               •  Business Expansion
+            </p>
           </div>
       </div>
     </div>
@@ -578,11 +608,11 @@
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="pane22 mt-4">
           <div class="pane22-head food_text">
-         <h3>FSSAI REGISTRATION</h3>
+         <h3>FSSAI BASIC LICENSE REGISTRATION</h3>
        </div>
        <div class="p-titel food_text">
         <p>
-          Class 1 certificates shall be issued for both business personnel and private individuals. These certificates will confirm that the information in the application provided by the subscriber does not conflict with the information in well-recognized consumer databases.
+          The food business operators like petty food manufacturers and also the small sized manufacturers, storage units, transporters, retails, marketers, distributers are required to obtain Basic FSSAI Registration. It is issued by State Government. It is mostly for units having an annual turnover upto 12 lakh. The maximum tenure is 5 years and minimum is 1 year.
         </p>
       </div>
       </div>
@@ -591,12 +621,13 @@
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="pane22 mt-4">
           <div class="pane22-head food_text">
-         <h3>FSSAI STATE LICENSE</h3>
+         <h3>FSSAI STATE LICENSE REGISTRATION</h3>
        </div>
        <div class="p-titel food_text">
         <p>
-          Class 1 certificates shall be issued for both business personnel and private individuals. These certificates will confirm that the information in the application provided by the subscriber does not conflict with the information in well-recognized consumer databases.
+          Food business operators like small to medium sized manufacturers and also the small sized manufacturers, storage units, transporters, retails, marketers, distributers are required to obtain FSSAI State Registration license. The state license is issued by state government and 
         </p>
+        <P>its important that you have operations in only one state like Delhi, in order to obtain State License. It is mostly for units having annual turnover more than 12 lakhs. The maximum tenure of this license is 5 years minimum is 1 year.</P>
       </div>
       </div>
       </div>
@@ -605,11 +636,11 @@
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="pane22 mt-4">
           <div class="pane22-head food_text">
-         <h3>FSSAI CENTRAL LICENSE</h3>
+         <h3>FSSAI CENTRAL LICENSE REGISTRATION</h3>
        </div>
        <div class="p-titel food_text">
         <p>
-          Class 1 certificates shall be issued for both business personnel and private individuals. These certificates will confirm that the information in the application provided by the subscriber does not conflict with the information in well-recognized consumer databases.
+          Food business operators such as Importers, 100% export oriented units, large manufacturers, operators in central government agencies, air ports, sea ports etc are required to obtain a central Food License. It is issued by central Government. FBOs have to obtain central license for their head office and if they have operations in more than one state. It is mostly for units having an annual turnover of more than 20 crore. The maximum tenure is 5 years and minimum is 1 year.
         </p>
       </div>
       </div>
@@ -630,7 +661,7 @@
       </div>
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-1.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -638,7 +669,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-2.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -646,7 +677,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-3.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -654,7 +685,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-4.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -662,7 +693,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-5.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -670,7 +701,7 @@
 
       <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
         <div class="highlight-sec mt-4">
-          <img src="images/color-img.jpg" class="img-fluid">
+          <img src="images/hi-6.png" class="img-fluid">
           <h3>Lorem ipsum</h3>
           <p>Aliquam feugiat tellus finibus, aliquet nunc at, mollis turpis. Nam eu quam nec metus consequat condimentum. Duis convallis condimentum eros vitae cursus. </p>
         </div>
@@ -725,6 +756,16 @@
      </div>
      <div class="benifits_button pt-5 py-5">
      <div class="row">
+      <!-- <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <p>Legalution provides complete service for food licensing and FSSAI registration. We promise to every Food Business</p>
+
+        <p>•  FSSAI registration in least time frame <br>
+           •  Help with online application filling of FSSAI<br>
+           •  Guidance on selecting the right food license type.<br>
+           •  Hand-holding through the entire registration procedure<br>
+           •  Solutions to all your concern and doubts
+        </p>
+      </div> -->
       <div class="col-md-4 col-sm-4 col-12"><img src="images/benifits/1.png"></div>
       <div class="col-md-4 col-sm-4 col-12"><img src="images/benifits/2.png"></div>
       <div class="col-md-4 col-sm-4 col-12"><img src="images/benifits/3.png"></div>
@@ -741,52 +782,36 @@
   <div class="faq">
   <div class="container" style="padding: 20px 0px 60px;">
 <h4 class="text-center">Frequently Asked Questions</h4>
-<button class="accordion-1 fst">1. What is the time limit for filing a complaint? </button>
+<button class="accordion-1 fst">1. Where can consumers find the information on enforcement activities of FSSAI? </button>
 <div class="panel">
-  <p>A complaint has to be filed within two years from the date on which the cause of action/ deficiency in service/defect in goods arises. However, a complaint may also be filed after two years, if the complainer satisfies the District Forum that he/she has sufficient reasons for not filing the complaint within such period. What is the provision for appeal?<br> • Aggrieved by the Order issued by the District Forum, appeal petition may be filed before the State Commission within 30 days from the date of receipt of Order. <br>• Aggrieved by the Order issued by the State Commission, appeal petition may be filed before the National Commission within 30 days from the date of receipt of Order.</p>
-</div>
-
-<button class="accordion-1">2. When can complaint be made? </button>
-<div class="panel">
-  <p>A complaint may be made in writing under the following circumstances:<br><br>
-• Loss or damage is caused to the consumer due to unfair or restrictive trade practice of a trader or service provider;<br>
-•  the article purchased by a consumer is defective;<br>
-•  the services availed  by a consumer suffer from any deficiency; <br>
-• a trader or service provider, as the case may be, has charged for the goods or for the service mentioned in the complaint a price in excess of the stipulated price;<br> 
-• Goods or services, which will be hazardous to life and safety, when used, are being offered for sale to the public.
+  <p><b>The details are available on FSSAI’s official website:</b><br>
+     http://www.fssai.gov.in/home/compliance/compliance-orders.html
 </p>
 </div>
 
-<button class="accordion-1">3. Who can file a Complaint? </button>
+<button class="accordion-1">2. What is improvement Notice and who issues it? </button>
 <div class="panel">
-  <p>•  Any consumer; <br>
-•  Any voluntary consumer association; <br>
-•  Central Government or any State Government; <br>
-•  One or more consumers, where there are numerous consumers having same interest <br>
-•  In case of death of a consumer, his legal heir or representative.
+  <p>The improvement notice is notice issued by designated officer if FBO fails to comply <br>
+    with the regulations as mentioned in section 32 of FSS act.
 </p>
 </div>
 
-<button class="accordion-1">4. Where to file a Complaint?</button>
+<button class="accordion-1 border_bottom">3. Under what circumstances can DO suspend the license? </button>
+<div class="panel border_bottom">
+  <p>If the FBO fails to comply with the improvement notice, his license may be <br>
+    suspended
+</p>
+</div>
+
+
+<!-- <button class="accordion-1">4. Where to file a Complaint?</button>
 <div class="panel">
   <p> As per the Consumer Protection Act, 1986 a complaint can be filed in: <br><br>
 • District Consumer Disputes Redressal Forum (DCDRF): If the value of the claim is upto ` 20 lakh<br>
 •  State Consumer Disputes Redressal Commission (SCDRC): If the value of the claim exceeds ` 20 lakhs but is within ` one crore. <br>
 • National Consumer Disputes Redressal Commission (NCDRC) If the value of the claim exceeds ` one crore
 </p>
-</div>
-
-<button class="accordion-1 border_bottom">5. What are the rights guaranteed under the Act? </button>
-<div class="panel border_bottom">
-  <p>•  Right to Safety <br>
-• Right to be informed <br>
-• Right to Choose <br>
-• Right to be heard <br>
-• Right to Redressal<br>
-• Right to Consumer Education
-
-</p>
-</div>
+</div> -->
 </div>
 </div>
 </section>
