--- a/iec.html
+++ b/iec.html
@@ -30,7 +30,7 @@
   color: #444;
   cursor: pointer;
   padding: 18px;
-  width: 100%;75
+  width: 100%;
   border-bottom: 1px solid #444;
   text-align: left;
   outline: none;
@@ -357,26 +357,25 @@
                  <li>
                    <div class="iec-whn-req1 req1">
                      <input type="checkbox" id="c21" name="cb">
-                     <label for="c21"><span>It is needed by the custom authorities to
-                      clear the shipments in the case of any imports</span></label>
+                     •<label for="c21"><span> It is required by importer when it needs to clear shipments from customs, then the importer should give code to customs authority.</span></label>
                    </div>
                  </li>
                  <li>
                    <div class="iec-whn-req1 req1">
                      <input type="checkbox" id="c22" name="cb">
-                     <label for="c22"><span>Also, it is needed by the bank to transfer the amount in the case of any imports made.</span></label>
+                     •<label for="c22"><span>  It is required by importer when he needs to send money abroad through banks, then he needs to provide code to banks.</span></label>
                    </div>
                  </li>
                  <li>
                    <div class="iec-whn-req1 req2">
                      <input type="checkbox" id="c23" name="cb">
-                     <label for="c23"><span>Vis-à-vis if an exporter needs to send the shipment,then it is required.</span></label>
+                     •<label for="c23"><span>   It is required by exporter to send his shipments, he has to provide the code at customs port.</span></label>
                    </div>
                  </li>
                  <li>
                    <div class="iec-whn-req1 req3">
                      <input type="checkbox" id="c24" name="cb">
-                     <label for="c24"><span>Or, if the exporter is supposed to receive money in foreign currency and it is transferred directly into his bank account</span></label>
+                     •<label for="c24"><span>   It is required by banks, when exporter receives money in foreign currency directly in his banks.</span></label>
                    </div>
                  </li>
                </ul>
@@ -475,6 +474,7 @@
           <table class="table">
             <thead>
               <tr>
+                <th>Sr. no</th>
                 <th>Sole Proprietorship</th>
                 <th>Partnership Firm</th>
                 <th>LLP</th>
@@ -484,6 +484,7 @@
             </thead>
             <tbody>
               <tr>
+                <td>1</td>
                 <td>Digital photograph(3*3)</td>
                 <td>Digital photograph (3*3) of the managing partner</td>
                 <td>Digital photograph (3*3) of the designated partner/director of
@@ -492,6 +493,7 @@
                 <td>Digital photograph (3*3) of the Karta</td>
               </tr>
               <tr>
+                <td>2</td>
                 <td>Copy of pan card of the proprietor</td>
                 <td>Copy of partnership deed</td>
                 <td>Applicant’s copy of pan card</td>
@@ -499,6 +501,7 @@
                 <td>Copy of pan of Karta</td>
               </tr>
               <tr>
+                <td>3</td>
                 <td>Copy of passport/voter id/driving license/UID</td>
                 <td>Copy of passport/voter id UID/drivinglicense/PAN of the managing partner signing the application</td>
                 <td>Copy of passport/voter id UID/driving license/PAN of the managing partner/director signing the application</td>
@@ -506,6 +509,7 @@
                 <td>Copy of passport/voter id UID/driving license/PAN of Karta</td>
               </tr>
               <tr>
+                <td>4</td>
                 <td>If the business is selfowned, then sale-deed</td>
                 <td>Sale-deed, in the case of self-owned business</td>
                 <td>Sale-deed, in the case of selfowned business</td>
@@ -513,6 +517,7 @@
                 <td>Sale-deed, in the case of selfowned business</td>
               </tr>
               <tr>
+                <td>5</td>
                 <td>If the business is rented,then rental/leaseagreement</td>
                 <td>If the business is rented, then rental/lease agreement</td>
                 <td>If the business is rented, then rental/lease agreement</td>
@@ -520,6 +525,7 @@
                 <td>If the business is rented, then rental/lease agreement</td>
               </tr>
               <tr>
+                <td>6</td>
                 <td></td>
                 <td>Bank certificate as per ANF 2A/Cancelled cheque bearing blueprinted name of the applicant entity and A/c no.</td>
                 <td>Bank certificate as per ANF 2A/ Cancelled cheque bearing blueprinted name of the applicant entity and A/c no.</td>
@@ -568,9 +574,9 @@
         <div class="ice-advantage-card check-js">
           <div class="ice-advantage-titel">
             <h3>Lifetime validity</h3>
-              <p>• As the name suggests, there is no need to renew this code again and again</p>
-              <p>• It will be valid till the entity for which it is issued exists. After the winding up of the company, this code expires</p>
-              <p></p>
+              <p>IEC is permanently registered which is valid for life time. Hence no efforts required for updating, renewal of IEC. It is valid till the business exists.</p>
+              <!-- <p>• It will be valid till the entity for which it is issued exists. After the winding up of the company, this code expires</p>
+              <p></p> -->
           </div>
         </div>
       </div>
@@ -646,17 +652,9 @@
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="td-mark_document">
             <h2 class="">Import Export Code</h2>
-            <p>Import Export Code or IEC is a 10-digit code that a business or a person needs
-              to import/export goods/services. This code is issued by DGFT (Director General
-              of Foreign trade), Ministry of Commerce and Industries, Government of India.
-              The validity of this code is for lifetime, that is, there is no need to renew it. This
-              code is generated within 5-15 working days after the documents are submitted
-              and all the corrections required are made</p>
+            <p class="text-justify">In this era of intense competition, everyone wants to grow their business internationally. Anyway, trading outside of domestic limits is no easy task. For doing business globally, there are several procedures and laws to be taken care of as a prerequisite for import and export from India. IEC (Import export code) license is essential for doing business on international waters.</p>
 
-            <p>This code has many names, like importer exported code, import export code,
-               import export license, import export number, IE code, IE license etc. You can
-               issue this code in either your name or under company’s name. Once issued, it
-              is valid for all its division/units/factories/branches</p>
+            <p class="text-justify">IEC is a 10 digit identification number that is issued by DGFT (Director General of Foreign Trade), Department of Commerce, Government of India. It is mandatory for companies’ to obtain this code before starting a business that deals with import export in Indian Territory. It is also known as Importer Exporter Code. There are certain procedures and prerequisites to be followed to obtain IEC. Once you fulfill the conditions you can get IEC code from DGFT offices.  </p>
           </div>
       </div>
        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
@@ -691,51 +689,82 @@
   <div class="faq">
   <div class="container" style="padding: 40px 0px 40px;">
 <h4 class="text-center">Frequently Asked Questions</h4>
-<button class="accordion-1 fst">1. What is the time limit for filing a complaint? </button>
+<button class="accordion-1 fst">1.  What is the procedure for depositing fee for online IEC application? </button>
 <div class="panel">
-  <p>A complaint has to be filed within two years from the date on which the cause of action/ deficiency in service/defect in goods arises. However, a complaint may also be filed after two years, if the complainer satisfies the District Forum that he/she has sufficient reasons for not filing the complaint within such period. What is the provision for appeal?<br> • Aggrieved by the Order issued by the District Forum, appeal petition may be filed before the State Commission within 30 days from the date of receipt of Order. <br>• Aggrieved by the Order issued by the State Commission, appeal petition may be filed before the National Commission within 30 days from the date of receipt of Order.</p>
+  <p>Fee can be deposited through online mode only by selecting Appl. Fee from left panel.</p>
 </div>
 
-<button class="accordion-1">2. When can complaint be made? </button>
+<button class="accordion-1">2. What may be the reason for rejection for application? </button>
 <div class="panel">
-  <p>A complaint may be made in writing under the following circumstances:<br><br>
-• Loss or damage is caused to the consumer due to unfair or restrictive trade practice of a trader or service provider;<br>
-•  the article purchased by a consumer is defective;<br>
-•  the services availed  by a consumer suffer from any deficiency; <br>
-• a trader or service provider, as the case may be, has charged for the goods or for the service mentioned in the complaint a price in excess of the stipulated price;<br> 
-• Goods or services, which will be hazardous to life and safety, when used, are being offered for sale to the public.
+  <p>•  Documents not proper<br>
+     •  Address proof not attached<br>
+     •  Wrong DGFT RA is selected
 </p>
 </div>
 
-<button class="accordion-1">3. Who can file a Complaint? </button>
+<button class="accordion-1">3. Is there a separate code for import and export? </button>
 <div class="panel">
-  <p>•  Any consumer; <br>
-•  Any voluntary consumer association; <br>
-•  Central Government or any State Government; <br>
-•  One or more consumers, where there are numerous consumers having same interest <br>
-•  In case of death of a consumer, his legal heir or representative.
-</p>
+  <p>No, same IEC code can be used for import and export</p>
 </div>
 
-<button class="accordion-1">4. Where to file a Complaint?</button>
+<button class="accordion-1">4.  Is IEC only required for goods?</button>
 <div class="panel">
-  <p> As per the Consumer Protection Act, 1986 a complaint can be filed in: <br><br>
-• District Consumer Disputes Redressal Forum (DCDRF): If the value of the claim is upto ` 20 lakh<br>
-•  State Consumer Disputes Redressal Commission (SCDRC): If the value of the claim exceeds ` 20 lakhs but is within ` one crore. <br>
-• National Consumer Disputes Redressal Commission (NCDRC) If the value of the claim exceeds ` one crore
-</p>
+  <p> NO, for goods and services as well</p>
 </div>
 
-<button class="accordion-1 border_bottom">5. What are the rights guaranteed under the Act? </button>
+<button class="accordion-1">5.  Are there any renewal and returns in IEC?</button>
+<div class="panel">
+  <p> No, it is one time registration and has life time validity</p>
+</div>
+
+<button class="accordion-1">6.  How is registration number be allocate for IEC number?</button>
+<div class="panel">
+  <p> PAN of applicant is registration number of IEC. Hence PAN and IEC number will be same.</p>
+</div>
+
+<button class="accordion-1">7.  Are government departments required to have IEC?</button>
+<div class="panel">
+  <p> No, State govt. and central govt. are not required to have IEC.</p>
+</div>
+
+<button class="accordion-1">8.  From where one can get IEC form?</button>
+<div class="panel">
+  <p> No, State govt. and central govt. are not required to have IEC.</p>
+</div>
+
+<button class="accordion-1">9.  What is the fee for fresh IEC application?</button>
+<div class="panel">
+  <p> Application fee is 250/-</p>
+</div>
+
+<button class="accordion-1">10. What is fee for modification of IEC?</button>
+<div class="panel">
+  <p> If informed after 90 days from the date of change, a penalty of 1000/- is levied.</p>
+</div>
+
+<button class="accordion-1">11. What is fee for issuance of duplicate IEC?</button>
+<div class="panel">
+  <p> Rs 200/- payable in form of D.D.</p>
+</div>
+
+<button class="accordion-1">12. Is Pan Card essential?</button>
+<div class="panel">
+  <p> Yes, Pan is mandatory</p>
+</div>
+
+<button class="accordion-1">13. How much time does it take to get an IEC?</button>
+<div class="panel">
+  <p> Normally two working days for processing</p>
+</div>
+
+<button class="accordion-1">14. How many days are required to send data to customs?</button>
+<div class="panel">
+  <p>The data is automatically transmitted electronically on the day of issue of IEC</p>
+</div>
+
+<button class="accordion-1 border_bottom">15. How can NRI apply ? </button>
 <div class="panel border_bottom">
-  <p>•  Right to Safety <br>
-• Right to be informed <br>
-• Right to Choose <br>
-• Right to be heard <br>
-• Right to Redressal<br>
-• Right to Consumer Education
-
-</p>
+  <p>NRI has to follow normal procedures, in addition permission taken from RBI/FIPB</p>
 </div>
 </div>
 </div>
