--- a/index.html
+++ b/index.html
@@ -284,6 +284,65 @@
     </div>
    
 </div>
+<!-- our-associated_sec -->
+<section class="our-associated_outter">
+   <div class="container">
+     <div class="row justify-content-center">
+       <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-12">
+          <div class="our-associated">
+            <h3>We are Associated</h3>
+          </div>
+       </div>
+       <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12">
+         <div id="owl-four" class="owl-carousel owl-theme">
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/1.png" class="img-fluid"></a>
+              </div> 
+           </div>
+
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/2.png" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/3.png" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/4.png" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/5.png" class="img-fluid"></a>
+              </div> 
+           </div>
+
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/6.png" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/asso/7.png" class="img-fluid"></a>
+              </div> 
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+</section>
+
+
+
+
+
+
 
 
 
@@ -300,17 +359,33 @@
 
     <div class="col-sm-1"></div>
 
-  	<div class="col-sm-2 col-12 text-center pad"><a href="dsc.html"><img src="images/Buy-DSC.png"  class="bt_grp"></a></div>
+  	<div class="col-sm-2 col-12 text-center pad"><a href="dsc.html"><img src="images/services/dsc.png"  class="bt_grp"></a></div>
 
-  	<div class="col-sm-2 col-12 text-center pad"><a href="msme.html"><img src="images/aadhhar.png"  class="bt_grp"></a></div>
+  	<div class="col-sm-2 col-12 text-center pad"><a href="msme.html"><img src="images/services/msme.png"  class="bt_grp"></a></div>
 
-  	<div class="col-sm-2 col-12 text-center pad"><a href="concom.html"><img src="images/Consumer-complaint.png"  class="bt_grp"></a></div>
+  	<div class="col-sm-2 col-12 text-center pad"><a href="concom.html"><img src="images/services/Consumer-complaint.png"  class="bt_grp"></a></div>
 
-  	<div class="col-sm-2 col-12 text-center pad"><a href="gst.html"><img src="images/gst.png"  class="bt_grp"></a></div>
+  	<div class="col-sm-2 col-12 text-center pad"><a href="gst.html"><img src="images/services/gst.png"  class="bt_grp"></a></div>
 
-    <div class="col-sm-2 col-12 text-center pad"><a href="rti.html"><img src="images/rti-app.png"  class="bt_grp"></a></div>
+    <div class="col-sm-2 col-12 text-center pad"><a href="rti.html"><img src="images/services/rti-app.png"  class="bt_grp"></a></div>
 
     <div class="col-sm-1"></div>
+
+    <div class="col-sm-1"></div>
+
+    <div class="col-sm-2 col-12 text-center pad"><a href="apeda.html"><img src="images/services/apeda.png"  class="bt_grp"></a></div>
+
+    <div class="col-sm-2 col-12 text-center pad"><a href="ice.html"><img src="images/services/ice.png"  class="bt_grp"></a></div>
+
+    <div class="col-sm-2 col-12 text-center pad"><a href="fssai.html"><img src="images/services/fssai.png"  class="bt_grp"></a></div>
+
+    <div class="col-sm-2 col-12 text-center pad"><a href="iso.html"><img src="images/services/iso.png"  class="bt_grp"></a></div>
+
+    <div class="col-sm-2 col-12 text-center pad"><a href="td-mark.html"><img src="images/services/tm.png"  class="bt_grp"></a></div>
+
+    <div class="col-sm-1"></div>
+
+
   </div>
   </div>
   <!--<div class="row">
@@ -748,7 +823,53 @@
                         </div><!-- </container> -->
                       </div><!-- </#clsay> -->
 
-                   
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+         <h2 class="parahead  client_say text-dark"><b>People using</b> Our Services</h2>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!-- our-associated_sec -->
+<section class="our-associated_outter bg-white">
+   <div class="container">
+     <div class="row justify-content-center">
+       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+          <div class="our-associated">
+            <h3 class="text-center text-dark py-5"><b>OUR</b> CLIENTS</h3>
+          </div>
+       </div>
+       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 pb-5">
+         <div id="owl-four" class="owl-carousel owl-theme blk">
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/gr1.jpg" class="img-fluid"></a>
+              </div> 
+           </div>
+
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/gr1.jpg" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/gr1.jpg" class="img-fluid"></a>
+              </div> 
+           </div>
+           <div class="item">
+              <div class="partner-item">
+               <a href="javascript:void(0);"><img src="images/gr1.jpg" class="img-fluid"></a>
+              </div> 
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+</section>                 
 
 <!-- Footer -->
 <div id="footer" class="container-fluid">
@@ -879,7 +1000,7 @@ $('#owl-two').owlCarousel({
       itemsDesktopSmall : [979,3],
       responsive:{
             0:{
-                items:1,
+                items:2,
                 nav:true
             },
             600:{
@@ -896,6 +1017,57 @@ $('#owl-two').owlCarousel({
    });
 
 
+$('#owl-four').owlCarousel({
+      margin: 10,
+      autoplay:true,
+      autoPlay: 3000, //Set AutoPlay to 3 seconds
+      items : 5,
+      itemsDesktop : [1199,3],
+      itemsDesktopSmall : [979,3],
+      responsive:{
+            0:{
+                items:1,
+                nav:true
+            },
+            600:{
+                items: 3,
+                nav:true
+            },
+            1000:{
+                items: 5,
+                nav:true,
+                loop:true
+            }
+        }
+   
+   });
+
+$('.blk').owlCarousel({
+      margin: 10,
+      autoplay: true,
+      autoPlay: 6000, //Set AutoPlay to 3 seconds
+      //autoplayTimeout:1000,
+      items : 5,
+      //loop:true,
+      itemsDesktop : [1199,3],
+      itemsDesktopSmall : [979,3],
+      responsive:{
+            0:{
+                items:1,
+                nav:true
+            },
+            600:{
+                items: 3,
+                nav:true
+            },
+            1000:{
+                items: 5,
+                nav:true,
+                loop:true
+            }
+        }
+   
+   });
 
 
 /*********progess-bar***********/
