--- a/iso.html
+++ b/iso.html
@@ -239,21 +239,6 @@
         </select>
       </div>
 
-      <div class="form-group">
-
-        <select class="form-control">
-          <option>Certificate types</option>
-          <option value="demo-1">Demo-1</option>
-          <option value="demo-2">Demo-2</option>
-          <option value="demo-3">Demo-3</option>
-          <option value="demo-4">Demo-4</option>
-        </select>
-      
-      <!-- <input type="text" class="form-control" name="phone" placeholder="Mobile No">
-      <div class="valid-feedback">Valid.</div>
-      <div class="invalid-feedback">Please fill out this field.</div> -->
-      </div>
-
       <div class="text-center"><button type="Submit" class="btn btn-primary btn_width bg-white td-mark_btn" style="color:#333;">GET STARTED</button></div>
   </form> 
       </div>
@@ -271,15 +256,12 @@
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="td-mark_document">
             <h2 class=""> ISO CERTIFICATION</h2>
-            <p class="text-justify">ISO certificate is one of the ways that provide standards to the organizations and thus lead way to innovation and development of trade. These standards also
-            ensure that the products and services of the organization meet the customer and regulatory requirements. In addition to this, it also demonstrates continuous
-            improvement. ISO is an independent, non-governmental, international organization that creates standards to ensure the quality, safety, and efficiency of the
-            products, services, and systems. It also certificates that the management system, manufacturing process, service or the documentation process has fulfilled all the
-            requirements for standardization and quality assurance.</p>
+            <p class="text-justify">ISO certification is a confirmation seal given by third party body representing the standards on which the company is running is one of the international standards developed and published by International Organization for standardization. The ISO has a set of standards that ensure that organizations meet needs of customers regarding a product or service. </p>
 
-            <p class="text-justify">ISO certificate is provided in many areas of industry, that is from energy management and social responsibility to medical devices and risk management. </p>
-            <p class="text-justify">We, at Legalution, provide the client every ISO, including some of the major ISOs like ISO 9001, ISO 1400z, OHSAS 18001, ISO 20000, ISO 50001, etc.</p>
-            <p class="text-justify">Our company has more than 7 years of experience in the implementation of ISO standards and consists of a team of engineers and auditors.</p>
+            <p class="text-justify">An organization applying for ISO certificate is audited based on samples of its sites, functions, products, processes and services. The auditor presents a list of opportunities for improvement to management. If there are no major problems, the certification body issues a certificate. Where major problems are identified, the organization has to present an improvement plan to the certification body; once the certification body is satisfied by the organization after implementing the improvements; it issues a certificate.  </p>
+
+            <p class="text-justify">Both accreditation bodies and certification bodies charge for their service. Many accreditation bodies have mutual understanding with each other regarding the certificate issued by one accredited certification body is accepted worldwide.</p>
+            <!-- <p class="text-justify">Our company has more than 7 years of experience in the implementation of ISO standards and consists of a team of engineers and auditors.</p> -->
           </div>
       </div>
     </div>
@@ -355,12 +337,21 @@
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
         <div class="td-mark_document">
             <h2 class="text-center"> Coverage of ISO 9001:2015</h2>
-            <p class="text-justify">It covers the requirements for a quality management system that includes documented information, planning and determining process interactions<br>
-            Any responsibilities in the case of management<br>
-            Resource management like human resources and an organization’s work environment<br>
-            Analyzing, measuring, and improving the QMS via many activities like internal audits and corrective & prevention plan.<br>
-            One of such certificate is ISO 9001. This is an international standard that is used for Quality Management System (QMS). A company is supposed to follow certain<br>
-            requirements to be allotted ISO 9001 standard.</p>
+            <p class="text-justify"><b>ISO 9001-2015 is based on plan-do-act-check methodology and provides a process oriented approach to document and review the structure, responsibilities and procedures required to accomplish efficient quality management in an organization. Specific sections of standards contain information such as :</b><br><br>
+           •  Requirement for Quality management system(QMS), including documented information, planning and determining process interaction.<br>
+           •  Responsibilities of management.<br>
+           • Management of resources including human resources and an organization’s work environment<br>
+           • Product realization, from design to delivery <br>
+           •  Measurement, analysis and improvement of QMS through activities like internal audits and corrective and preventive action
+          </p><br>
+
+          <p class="text-justify"><b>Some of the key updates in ISO 9001-2015 include</b><br><br>
+            • The introduction of new jargons<br>
+            • Restructuring information<br>
+            • Significance on risk based thinking to enhance the application of process approach<br>
+            • Improved applicability for services<br>
+            • Increased leadership requirements.
+          </p>
           </div>
       </div>
     </div>
@@ -819,50 +810,62 @@
   <div class="faq">
   <div class="container" style="padding: 20px 0px 60px;">
 <h4 class="text-center">Frequently Asked Questions</h4>
-<button class="accordion-1 fst">1. What is the time limit for filing a complaint? </button>
+<button class="accordion-1 fst">1.  Does ISO carry out certification? </button>
 <div class="panel">
-  <p>A complaint has to be filed within two years from the date on which the cause of action/ deficiency in service/defect in goods arises. However, a complaint may also be filed after two years, if the complainer satisfies the District Forum that he/she has sufficient reasons for not filing the complaint within such period. What is the provision for appeal?<br> • Aggrieved by the Order issued by the District Forum, appeal petition may be filed before the State Commission within 30 days from the date of receipt of Order. <br>• Aggrieved by the Order issued by the State Commission, appeal petition may be filed before the National Commission within 30 days from the date of receipt of Order.</p>
+  <p>No, ISO doesn’t provide certification.</p>
 </div>
 
-<button class="accordion-1">2. When can complaint be made? </button>
+<button class="accordion-1">2. Who can use ISO Logo?</button>
 <div class="panel">
-  <p>A complaint may be made in writing under the following circumstances:<br><br>
-• Loss or damage is caused to the consumer due to unfair or restrictive trade practice of a trader or service provider;<br>
-•  the article purchased by a consumer is defective;<br>
-•  the services availed  by a consumer suffer from any deficiency; <br>
-• a trader or service provider, as the case may be, has charged for the goods or for the service mentioned in the complaint a price in excess of the stipulated price;<br> 
-• Goods or services, which will be hazardous to life and safety, when used, are being offered for sale to the public.
+  <p>Only ISO, ISO members, and ISO Technical committees are allowed to use ISO logo.
 </p>
 </div>
 
-<button class="accordion-1">3. Who can file a Complaint? </button>
+<button class="accordion-1">3. Why would I want ISO certification? </button>
 <div class="panel">
-  <p>•  Any consumer; <br>
-•  Any voluntary consumer association; <br>
-•  Central Government or any State Government; <br>
-•  One or more consumers, where there are numerous consumers having same interest <br>
-•  In case of death of a consumer, his legal heir or representative.
+  <p>Each  ISO has its own benefits. ISO 9001 puts your consumer first, ISO 27000 protects your system, data.
 </p>
 </div>
 
-<button class="accordion-1">4. Where to file a Complaint?</button>
+<button class="accordion-1">4.  What does ISO certification cost?</button>
 <div class="panel">
-  <p> As per the Consumer Protection Act, 1986 a complaint can be filed in: <br><br>
-• District Consumer Disputes Redressal Forum (DCDRF): If the value of the claim is upto ` 20 lakh<br>
-•  State Consumer Disputes Redressal Commission (SCDRC): If the value of the claim exceeds ` 20 lakhs but is within ` one crore. <br>
-• National Consumer Disputes Redressal Commission (NCDRC) If the value of the claim exceeds ` one crore
+  <p> Costs vary depended on the size of organization and the level to which company is running with regards to processes and procedures.
 </p>
 </div>
 
-<button class="accordion-1 border_bottom">5. What are the rights guaranteed under the Act? </button>
+<button class="accordion-1">5.  Can I get ISO certification as a start up business?</button>
+<div class="panel">
+  <p> Yes, ISO certification is suited to any business making turnover of 250,000 euros per annum.
+</p>
+</div>
+
+<button class="accordion-1">6.  How long is an ISO certification valid for?</button>
+<div class="panel">
+  <p> Every provider is different. Some ISO certificates are valid for 1 year and are subjected to annual re-certificate audits.
+</p>
+</div>
+
+<button class="accordion-1">7.  How much time will it take in obtaining final certificate?</button>
+<div class="panel">
+  <p> On providing correct documents, you can obtain final certificate within 2-3 days.
+</p>
+</div>
+
+<button class="accordion-1">8.  What is difference between ISO certification and accreditation?</button>
+<div class="panel">
+  <p> Accreditation is kind of certification but should not be used as an interchangeable alternative for certification.
+</p>
+</div>
+
+<button class="accordion-1">9.  What is IAF?</button>
+<div class="panel">
+  <p>IAF stands for International Accreditation forum which continuously improvises the international standards.
+</p>
+</div>
+
+<button class="accordion-1 border_bottom">10. Should ISO certified company should respond to consumer complaints?</button>
 <div class="panel border_bottom">
-  <p>•  Right to Safety <br>
-• Right to be informed <br>
-• Right to Choose <br>
-• Right to be heard <br>
-• Right to Redressal<br>
-• Right to Consumer Education
-
+  <p>Yes.
 </p>
 </div>
 </div>
