--- a/td-mark.html
+++ b/td-mark.html
@@ -291,18 +291,18 @@
           <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12">
           <div class="td-mark_document">
             <h2>Documents needed for Trademark Registration</h2>
-            <p>Trademark ling is a simple, online process which can be completed within 24 hours. IndiaFilings has helped le over fty thousand trademark applications in India and has obtained registrationfor various leading brands.</p>
 
-            <p>There are a certain set of documents that need to be signed, scanned and sent to us. The list is given below.</p>
+            <p>Trademarks are usually the insignias, words or symbols that represent a product and differentiates it from other products of its kind. Registering trademarks helps to protect the goodwill built under brand or brand name. Legalution has helped many brands to build a registered trademark. </p>
 
-            <p>Signed Form 48- Form 48 is used to provide IndiaFilings attorney with authorisation to le your trademark application.
-                Identity proof of the trademark owner- It can be PAN card, passport or Aadhar card.
-                Incorporation certicate (if its a company or LLP)
-                Udyog Aadhar registration certicate- The government fees for trademark ling for companies
-                having Udyog Aadhar is Rs. Rs. 4500. However, they have to pay Rs. 9000 to le is they do not
-                possess an Udyog Aadhar.
-                Logo, if applicable and available.</p>
+            <p>Thereareacertainsetofdocumentsthatneedtobesigned,scannedandsenttous.Thelistis givenbelow.</p>
 
+            <p>Signed Form 48- Form 48 is used to provide Legalution attorney with authorisation to file your trademark application. Applicants need to ensure that the form is filled, especially all the mandatory sections so that the evaluator considers the applied trademark.</p>
+
+            <p>Identity proof of the trademark owner- It can be PAN card, passport or Aadhar card. Incorporation certificate (if it’s a company or LLP). Incase of trademark registration of a company, furnish documents supporting the country in which the company is registered, mentioning the complete address. If it is registering trademark for a partnership concern, provide identity proof of all the partners.</p>
+
+            <p>UdyogAadhar registration certificate- The government fees for trademark filing for companies having UdyogAadhar is Rs. Rs. 4500. However, they have to pay Rs. 9000 to file is they do not possess an UdyogAadhar.</p>
+
+                <p>Logo, if applicable and available. </p>
                 <p>Address proof.</p>
           </div>
         </div>
@@ -319,13 +319,12 @@
           <ul>
               <li>
                 <div class="procedure-td-mark_list-1">
-                  <div class="procedure-td-mark_img-holder">
+                  <div class="procedure-td-mark_img-holder w-130">
                     <h6>1</h6>
                   </div>
                   <div class="procedure-titel">
-                  <h3>Complete our trademark Form</h3>
-                  <p>You need to ll our simple online trademark application
-                     form & submit documents.</p>
+                  <h3>Trademark Search</h3>
+                  <p>This search is to check if your business name or logo is similar to other registered trademarks. Once found to be unique you can proceed to next step</p>
                   </div>
             </div>
           </li>
@@ -337,21 +336,19 @@
             </div>
             <div class="procedure-titel">
             <h3>Complete our trademark Form</h3>
-            <p>You need to ll our simple online trademark application
-               form & submit documents.</p>
+            <p>You need to fill our simple online trademark application form & submit documents.</p>
             </div>
           </div>
         </li>
 
           <li>
             <div class="procedure-td-mark_list-1">
-            <div class="procedure-td-mark_img-holder">
+            <div class="procedure-td-mark_img-holder w-135">
               <h6>3</h6>
             </div>
             <div class="procedure-titel">
-            <h3>Complete our trademark Form</h3>
-            <p>You need to ll our simple online trademark application
-               form & submit documents.</p>
+            <h3>Trademark registeration</h3>
+            <p>Legalutions will first check if your application is already taken, If it has, a trademark objection will be raised.If not it will make an advertisement in Trademark Journal.</p>
             </div>
           </div>
         </li>
@@ -643,44 +640,44 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
-          <div class="class-sec">
+          <div class="class-sec ">
             <h3>Trademark Class 1</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Chemical used in industry, science, photography, agriculture, horticulture and forestry; unprocessed plastics; chemical substances for preserving foodstuffs; </p>
           </div>
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
           <div class="class-sec">
             <h3>Trademark Class 2</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Paints; varnishes; preservatives against rust and against deterioration of wood; colorants; metals in foil and powder form for painters; decorators; printers and artists; </p>
           </div>
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
           <div class="class-sec">
             <h3>Trademark Class 3</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Bleaching preparations and substances for laundry use; cleaning; polishing; abrasive preparations; soaps; perfumery, essential oils, cosmetics, hair lotions; </p>
           </div>
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
-          <div class="class-sec">
+          <div class="class-sec ">
             <h3>Trademark Class 4</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Industrial oils and greases; lubricants; dust absorbing, wetting and binding compositions; fuels (including motor spirit) and illuminants; candles, wicks; </p>
           </div>
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
           <div class="class-sec">
             <h3>Trademark Class 5</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Pharmaceutical, veterinary and sanitary preparations; dietetic substances adapted for medical use, food for babies; disinfectants; fungicides, herbicides; </p>
           </div>
         </div>
 
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-12 pt-4">
           <div class="class-sec">
             <h3>Trademark Class 6</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>Common metals and their alloys; metal building materials; small items of metal hardware; pipes and tubes of metal; goods of metal not included in other classes; </p>
           </div>
         </div>
       </div>
